<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Application general labels -->
	<string name="app_version">1.2.0</string>
	<string name="app_author">Campingwebben</string>
	<string name="app_license_text">CC-BY-SA</string>
	<string name="app_license_source">GPL</string>
    <string name="app_name">Stellplats</string>

    <!-- Misc labels -->
    <string name="stellplats">Stellplats</string>
    <string name="sweden">Sweden</string>
    
	<!-- Splash screen labels -->
	<string name="splash_description">Information about mobile home pitches\nin Sweden, collected by the users\nand organised by Campingwebben</string>
 	<string name="splash_version">Release</string>
	<string name="splash_and">and</string>

	<!-- List view labels -->
	<string name="list_img_alt">Show details</string>
	<string name="list_txt_pitches">Pitches in</string>
		
	
	<!-- Details screen labels -->
	<string name="tabs_tabname_facts">Facts</string>
	<string name="tabs_tabname_map">Map</string>
	<string name="details_actionbar_text">Pitch information</string>
	<string name="details_label_facts">Facts</string>
	<string name="details_label_caravan">Welcoming / enough place for caravans</string>
	<string name="details_label_winter">Winter open</string>
	<string name="details_label_stay">Unknown type of place</string>
	<string name="details_label_longstay">More than one night</string>
	<string name="details_label_shortstay">Single nights</string>
	<string name="details_label_service">Service</string>
	<string name="details_label_toilet">Toilets</string>
	<string name="details_label_shower">Shower</string>
	<string name="details_label_electric">Electricity</string>
	<string name="details_label_water">Water</string>
	<string name="details_label_waste">Waste</string>
	<string name="details_label_fee">Fee</string>
	<string name="details_label_descr">Description</string>
	<string name="details_label_other">Other</string>
	<string name="details_img_alt">Status</string>
	
	<!-- GPS map screen labels -->
	<string name="gmap_txt_actionbar">Show pitch on map</string>
	
	<string name="gmap_msg_gpsNotActive">GPS not activated</string>
	<string name="gmap_msg_noLocation">Location not yet acquired</string>
	<string name="gmap_msg_currentTitle">Current position</string>
	<string name="gmap_msg_currentText">You are here!</string>
	<string name="gmap_msg_gpsDisabled">GPS disabled</string>
	<string name="gmap_msg_gpsEnabled">GPS enabled</string>
	<string name="gmap_msg_statusChanged">Status changed</string>

	<string name="gmap_ballon_layby">lay-by</string>
	<string name="gmap_ballon_pitch">pitch</string>
	<string name="gmap_ballon_winterOpen">winter open</string>
	<string name="gmap_ballon_winterClosed">winter closed</string>
	<string name="gmap_ballon_caravan">caravans welcome</string>
	<string name="gmap_ballon_noCaravan">no caravans</string>
	<string name="gmap_ballon_toilet">toilet</string>
	<string name="gmap_ballon_water">water</string>
	<string name="gmap_ballon_shower">shower</string>
	<string name="gmap_ballon_waste">waste</string>
	<string name="gmap_ballon_electric">electric</string>
	<string name="gmap_ballon_missing">Missing</string>
	<string name="gmap_ballon_service">Service</string>


		<!-- About dialog labels -->
	<string name="about_label_about">About</string>
	<string name="about_label_version">Release:</string>
	<string name="about_label_text00">Application created 2011–2012 by Peter Kindström, Campingwebben.</string>
	<string name="about_label_head01">Thanks to</string>
	<string name="about_label_text01a">All information contributors</string>
	<string name="about_label_text01b">Noun for launcher symbol (PD)</string>
	<string name="about_label_text01c">Chris Haseman for splash screen code</string>
	<string name="about_label_head02">License</string>
	<string name="about_label_text02a">Application released under GPL v3.0 or later.</string>
	<string name="about_label_text02b">Text, icons and pictures licensed under Creative Commons BY-NC-SA v3.0 or later.</string>

	<!-- Menu labels -->
    <string name="list_menu_itemChoose_label">Choose region</string>
    <string name="list_menu_itemMap_label">GPS-map</string>
    <string name="list_menu_itemAbout_label">About</string>

	<!-- Choose region dialog heading -->
	<string name="dialog_region">Choose region</string>

	<!-- Names of regions -->
	<string-array name="region">
		<item>All</item>
		<item>Blekinge</item>
		<item>Dalarna</item>
		<item>Gotland</item>
		<item>Gävleborg</item>
		<item>Halland</item>
		<item>Jämtland</item>
		<item>Jönköping</item>
		<item>Kalmar</item>
		<item>Kronoberg</item>
		<item>Norrbotten</item>
		<item>Skåne</item>
		<item>Stockholm</item>
		<item>Södermanland</item>
		<item>Uppsala</item>
		<item>Värmland</item>
		<item>Västerbotten</item>
		<item>Västernorrland</item>
		<item>Västmanland</item>
		<item>Västra Götaland</item>
		<item>Örebro</item>
		<item>Östergötland</item>
	</string-array>
	<!-- /Names of regions -->
</resources>

